@@ -10,7 +10,7 @@ function step3_do () {
   $result = "<h2>Step 3/4 - Confirm your vote</h2>\n";
 
   $result .= "<p><strong>".$election["question"]."</strong></p>\n";
-  if (($choices_nb == 1 && $vote < 0) ||
+  if (($choices_nb == 1 && $vote >= 0) ||
       ($choices_nb > 1 && count ($votes_array) >= 1)) {
     $result .= "<p>You choose to vote for:</p>\n";
 
